// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checks that Spinner snapshots don't change > renders correctly with label, aligned horizontally 1`] = `
<body>
  <div>
    <div
      class="css-1m9ibdo-MuiStack-root"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 css-1mzt6m4-MuiTypography-root"
      >
        label
      </p>
    </div>
  </div>
</body>
`;

exports[`Checks that Spinner snapshots don't change > renders correctly with label, aligned vertically 1`] = `
<body>
  <div>
    <div
      class="css-10y7f4i-MuiStack-root"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 css-1mzt6m4-MuiTypography-root"
      >
        label
      </p>
    </div>
  </div>
</body>
`;

exports[`Checks that Spinner snapshots don't change > renders correctly without label 1`] = `
<body>
  <div>
    <div
      class="css-10y7f4i-MuiStack-root"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>
</body>
`;
